# boxcc1.0

./: .gitignore  PROJECT_SPEC.md  README.md  agent-memory-execution-plan.md  index.legacy.html  main.js  package-lock.json  package.json  preload.js  tmp_index_script.jsx
backend/: .env.example  config.yaml  pyproject.toml  runtime_events.py  runtime_events.py.pyc.1901344939840  sitecustomize.py
backend/agents/: __init__.py  lead_agent.py  master_prompt.py  prompt.py  prompt_live.py  spec_loader.py  thread_state.py
backend/agents/memory/: prompt.py  (+3 more)
backend/agentspecs/: ana.md  biz_bi.md  biz_fin.md  biz_hr.md  biz_it.md  biz_legal.md  biz_voc.md  boxcc.md  chl_ch.md  chl_ec.md  chl_store.md  cpy.md  crt.md  dom.md  gro_brand.md  gro_content.md  gro_pr.md  mer_ops.md  mer_plan.md  orc.md  pln.md  sup_buy.md  sup_pmc.md  sup_qc.md  sup_wms.md
backend/app/: __init__.py  main.py
backend/config/: __init__.py  app_config.py  paths.py
backend/data/: orc_sessions.bak
backend/deliverables/: __init__.py  registry.py
backend/knowledge/: __init__.py  chroma_retriever.py  registry.py  retriever.py  tools.py
backend/models/: __init__.py  factory.py
backend/scripts/: heavy_test.py  ingest_kb.py  kb_smoke.py  sample_management_ppt.py
backend/session/: __init__.py  checklist.py  state.py  store.py  world_state.py
backend/subagents/: __init__.py  config.py  executor.py  executor_live.py  prompt.py  registry.py  task_packet.py  tools.py  tools_live.py  workflow.py
backend/tools/: __init__.py  charts.py  exports.py  management_ppt.py  ppt_theme.py  product_detail.py
(+138 files in other folders)
